--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
   <main id="main-content" data-layout="index">
     <section id="hero" class="pt-8 pb-6">
       <h1 class="my-4 inline-block text-4xl font-bold sm:my-8 sm:text-5xl">
-        Mingalaba
+        數位治理實驗室
       </h1>
       <a
         target="_blank"
@@ -42,20 +42,20 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         <span class="sr-only">RSS Feed</span>
       </a>
 
+      <h2 class="mt-4 text-lg font-medium leading-relaxed text-skin-secondary sm:mt-6 sm:text-xl">
+        探索 Web3、AI 與 ESG 的永續新共識。
+      </h2>
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        這是一個開放的「實驗室」。無論您是學生、開發者、研究者，還是關心未來的決策者，歡迎加入這場關於未來的對話與實驗。.
       </p>
       <p class="mt-2">
-        Read the blog posts or check
+        我是馬可博士。請前往
         <LinkButton
-          class="underline decoration-dashed underline-offset-4 hover:text-accent"
-          href="https://github.com/satnaing/astro-paper#readme"
+          className="underline decoration-dashed underline-offset-4 hover:text-accent"
+          href="https://fb.com/marcolee1107"
         >
-          README
-        </LinkButton> for more info.
+        我的頁面
+        </LinkButton> 來關注我的最新動態。
       </p>
       {
         // only display if at least one social link is enabled
@@ -74,7 +74,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
       featuredPosts.length > 0 && (
         <>
           <section id="featured" class="pt-12 pb-6">
-            <h2 class="text-2xl font-semibold tracking-wide">Featured</h2>
+            <h2 class="text-2xl font-semibold tracking-wide">精選</h2>
             <ul>
               {featuredPosts.map(data => (
                 <Card variant="h3" {...data} />
@@ -89,7 +89,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
     {
       recentPosts.length > 0 && (
         <section id="recent-posts" class="pt-12 pb-6">
-          <h2 class="text-2xl font-semibold tracking-wide">Recent Posts</h2>
+          <h2 class="text-2xl font-semibold tracking-wide">近期文章</h2>
           <ul>
             {recentPosts.map(
               (data, index) =>
@@ -102,7 +102,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
 
     <div class="my-8 text-center">
       <LinkButton href="/posts/">
-        All Posts
+        所有文章
         <IconArrowRight class="inline-block rtl:-rotate-180" />
       </LinkButton>
     </div>
