--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,9 +18,9 @@ const { noMarginTop = false } = Astro.props;
   >
     <Socials centered />
     <div class="my-2 flex flex-col items-center whitespace-nowrap sm:flex-row">
-      <span>Marco Lee Copyright &#169; {currentYear}</span>
+      <span>Marco Lee &#169; {currentYear}</span>
       <span class="hidden sm:inline">&nbsp;|&nbsp;</span>
-      <span>All rights reserved.</span>
+      <span>保留所有權利</span>
     </div>
   </div>
 </footer>
