變更社交圖示間距

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -9,12 +9,12 @@ export interface Props {
 const { centered = false } = Astro.props;
 ---
 
-<div class:list={["flex-wrap justify-center gap-1", { flex: centered }]}>
+<div class:list={["flex-wrap justify-center gap-2", { flex: centered }]}>
   {
     SOCIALS.map(social => (
       <LinkButton
         href={social.href}
-        class="p-2 hover:rotate-6 sm:p-1"
+        class="p-2 hover:rotate-6"
         title={social.linkTitle}
         target="_blank" rel="noopener noreferrer"
       >
