--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,16 +46,16 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
         探索 Web3、AI 與 ESG 的永續新共識。
       </h2>
       <p>
-        這是一個開放的「實驗室」。無論您是學生、開發者、研究者，還是關心未來的決策者，歡迎加入這場關於未來的對話與實驗。
+        這是一個開放的「實驗室」。無論您是學生、開發者、研究者，還是關心未來的管理者和決策者，誠摯邀請您加入這場關於未來的對話與實驗。
       </p>
       <p class="mt-2">
         我是馬可博士。請前往
         <LinkButton
           className="underline decoration-dashed underline-offset-4 hover:text-accent"
-          href="https://fb.com/marcolee1107"
+          href="/about/"
         >
         我的頁面
-        </LinkButton> 來關注我的最新動態。
+        </LinkButton> 來關注我們的動態。
       </p>
       {
         // only display if at least one social link is enabled
