--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -131,6 +131,15 @@ const structuredData = {
     <ClientRouter />
 
     <script is:inline src="/toggle-theme.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R8D7KZZ1WC"></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-R8D7KZZ1WC');
+    </script>
   </head>
   <body>
     <slot />
