--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -132,6 +132,7 @@ const structuredData = {
 
     <script is:inline src="/toggle-theme.js"></script>
 
+    // Google Analytics
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-R8D7KZZ1WC"></script>
     <script is:inline>
       window.dataLayer = window.dataLayer || [];
