設定 threads 雙向指向

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -66,6 +66,7 @@ const structuredData = {
     <meta name="description" content={description} />
     <meta name="author" content={author} />
     <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="me" href="https://www.threads.net/@marcolee1107" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content={title} />
